# multimodal_customer_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_api.ps1  run_api.sh  smoke_test.ps1  smoke_test.sh
src/customer_agent/: __init__.py  __main__.py  agent.py  api_server.py  config_runtime.py  llm_router.py  paths.py  product_router.py  rerank_client.py  retrieval_engine.py  submission_utils.py
tools/: __init__.py
tools/data_pipeline/: __init__.py  build_retrieval_index.py  gen_section_summaries.py  parse_manuals.py
tools/generation/: __init__.py  generate_submission_api.py  generate_submission_v5.py
tools/local_services/: __init__.py  embedding_server.py  rerank_server.py
tools/validation/: __init__.py  validate_code_layout.py  validate_delivery.py  validate_performance.py
