[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "my-multimodal-customer-agent"
version = "1.0.0"
description = "Code-only multimodal customer-service RAG agent"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
customer-agent-api = "customer_agent.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
